# wotv_barracks

./: .gitignore  CMakeLists.txt  README.md
json/: units.json
src/: main.cpp
src/database/: dbo.cpp  dbo.hpp  unit.cpp  unit.hpp  unit_enum.hpp
src/frontend/: gui.cpp  gui.hpp  helper.cpp  helper.hpp
